--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,13 @@
 {
   "editor.tabSize": 2,
   "editor.insertSpaces": true,
-  "editor.rulers": [110],
-  "editor.wordWrapColumn": 110,
+  "editor.rulers": [80],
+  "editor.wordWrapColumn": 80,
   "files.trimTrailingWhitespace": true,
   "files.insertFinalNewline": true,
   "prettier.singleQuote": true,
-  "prettier.printWidth": 110,
+  "prettier.printWidth": 80,
+  "editor.formatOnSave": true,
   "files.exclude": {
     "**/.git": true,
     "**/.DS_Store": true,
