--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphene-js",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "GraphQL Framework for Javascript",
   "main": "./lib/index.js",
   "scripts": {
@@ -9,8 +9,7 @@
     "watch": "tsc -w",
     "prepublish": "npm run clean && npm run compile",
     "test": "./node_modules/.bin/jest",
-    "test:smoke":
-      "rm -rf node_modules && npm install --prod && node ./lib/cli.js && echo 'Smoke Test Passed'"
+    "test:smoke": "rm -rf node_modules && npm install --prod && node ./lib/cli.js && echo 'Smoke Test Passed'"
   },
   "repository": {
     "type": "git",
@@ -49,8 +48,13 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "setupFiles": ["<rootDir>/src/polyfills.js"],
-    "testMatch": ["**/test/**/*.(js|ts)", "**/test/*.(js|ts)"],
+    "setupFiles": [
+      "<rootDir>/src/polyfills.js"
+    ],
+    "testMatch": [
+      "**/test/**/*.(js|ts)",
+      "**/test/*.(js|ts)"
+    ],
     "testPathIgnorePatterns": [
       "<rootDir>/node_modules/",
       "<rootDir>/lib/",
@@ -60,6 +64,9 @@
     "transform": {
       ".(js|ts)": "<rootDir>/test/preprocessor.js"
     },
-    "moduleFileExtensions": ["ts", "js"]
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ]
   }
 }
