Explicitly import/export types for generating d.ts files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,15 +4,17 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
+    "declaration": true,
     "outDir": "lib",
     "removeComments": true,
     "strict": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "noUnusedParameters": true,
-    "noUnusedLocals": true,
-    "allowJs": true,
+    "allowJs": false,
     "allowUnreachableCode": true
   },
-  "include": ["src/**/*"]
+  "include": [
+    "src/**/*"
+  ]
 }
