Set types exportable in Typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,13 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
+    "declaration": true,
     "outDir": "lib",
     "removeComments": true,
     "strict": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "noUnusedParameters": true,
-    "noUnusedLocals": true,
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "allowUnreachableCode": true,
