--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "setupFiles": ["<rootDir>/src/polyfills.js"],
+    "setupFiles": [],
     "testMatch": ["**/test/**/*.(js|ts)", "**/test/*.(js|ts)"],
     "testPathIgnorePatterns": [
       "<rootDir>/node_modules/",
