Updated typescript version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,13 +13,9 @@
     "noUnusedParameters": true,
     "allowSyntheticDefaultImports": true,
     "allowUnreachableCode": true,
+    "strictPropertyInitialization": false,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": [
-    "src/",
-    "test/",
-    "examples/",
-    "examples/starwars-ts/*"
-  ]
+  "include": ["src/", "test/", "examples/", "examples/starwars-ts/*"]
 }
