Added typescript linting.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ language: node_js
 sudo: false
 
 node_js:
+  - "4"
   - "6"
   - "8"
 
@@ -12,8 +13,17 @@ cache:
     - $HOME/.npm
 
 install:
+  - npm config set spin=false
+  - npm install -g coveralls
   - npm install
+  - npm install graphql@$GRAPHQL_VERSION
 
 script:
-  - npm test
-  - npm run test:smoke
+  - npm run lint
+  - npm test --coverage
+  - coveralls < ./coverage/lcov.info || true # if coveralls doesn't have it covered
+
+env:
+  - GRAPHQL_VERSION='^0.10'
+  - GRAPHQL_VERSION='^0.11'
+  - GRAPHQL_VERSION='^0.12'
