--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "graphene-js",
   "version": "0.1.3",
   "description": "GraphQL Framework for Javascript",
-  "main": "./lib/index.js",
-  "typings": "./lib/index.d.ts",
+  "main": "lib/index.js",
+  "typescript": {
+    "definition": "lib/index.d.ts"
+  },
+  "typings": "lib/index.d.ts",
   "scripts": {
     "clean": "rm -rf lib",
     "compile": "tsc",
@@ -11,7 +14,7 @@
     "prepublish": "npm run clean && npm run compile",
     "test": "./node_modules/.bin/jest",
     "posttest": "npm run lint",
-    "lint": "tslint $(find src | grep ts$)"
+    "lint": "tslint  \"src/**/*.ts\" -e \"**/__tests__/**\""
   },
   "repository": {
     "type": "git",
@@ -60,17 +63,22 @@
   "jest": {
     "testEnvironment": "node",
     "setupFiles": [],
-    "testMatch": ["**/test/**/*.(js|ts)", "**/test/*.(js|ts)"],
+    "testMatch": [
+      "**/__tests__/**/*.(js|ts)",
+      "**/__tests__/*.(js|ts)",
+      "**/test/**/*.(js|ts)",
+      "**/test/*.(js|ts)"
+    ],
     "testPathIgnorePatterns": [
       "<rootDir>/node_modules/",
       "<rootDir>/lib/",
       "<rootDir>/test/fixtures/",
-      "<rootDir>/test/preprocessor.js"
+      "<rootDir>/scripts/preprocessor.js"
     ],
     "collectCoverageFrom": ["src/**"],
     "coveragePathIgnorePatterns": ["/node_modules/", ".*.d.ts"],
     "transform": {
-      ".(js|ts)": "<rootDir>/test/preprocessor.js"
+      ".(js|ts)": "<rootDir>/scripts/preprocessor.js"
     },
     "moduleFileExtensions": ["ts", "js"]
   }
